# pymagsac

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup.py
docs/: Doxyfile  python_code.rst
examples/: example.ipynb
lib/magsac/: CMakeLists.txt
lib/magsac/include/: estimator.h  magsac.h
lib/magsac/src/: fundamental_estimator.cpp  homography_estimator.cpp
src/pymagsac/: bindings.cpp  magsac_python.cpp  magsac_python.hpp
src/pymagsac/graph-cut-ransac/: CMakeLists.txt
src/pymagsac/graph-cut-ransac/include/: essential_estimator.h  fundamental_estimator.h  mathfunc.h  perspective_n_point_estimator.h  scoring_function.h  solver_fundamental_matrix_seven_point.h  solver_p3p.h  types.h
src/pymagsac/include/: estimator.h  estimators.h  fundamental_estimator.h  homography_estimator.h  magsac.h  magsac_python.hpp  utils.h
src/pymagsac/src/: bindings.cpp  magsac_python.cpp
tests/: math_test.py
